--- a/PatientRecordMVVM/View/PatientRecordDetails.xaml
+++ b/PatientRecordMVVM/View/PatientRecordDetails.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PatientRecordMVVM.View"
         mc:Ignorable="d"
-         MinWidth="450"
+        MinWidth="450"
         Title="PatientRecordDetails" Height="850" Width="600">
 
     <!--Main Grid-->
@@ -29,29 +29,29 @@
 
             <!--Patient Id block-->
             <!--StackPanelPatientID-->
-            <StackPanel Style="{StaticResource StackpanelStyle}" Grid.ColumnSpan="2">
+            <StackPanel Grid.ColumnSpan="2" Style="{StaticResource StackpanelStyle}" >
                 <Label FontSize="16" FontWeight="Bold" Foreground="White">
                     Patient ID :
                 </Label>
-                <Label Margin="5,0"  FontSize="16" Foreground="White">10001</Label>
+                <Label FontSize="16" Foreground="White" Margin="5,0" >10001</Label>
             </StackPanel>
 
             <!--Date block-->
             <!--StackPanelDate-->
-            <StackPanel Style="{StaticResource StackpanelStyle}" Grid.ColumnSpan="3" HorizontalAlignment="Right">
+            <StackPanel  Grid.ColumnSpan="3" HorizontalAlignment="Right" Style="{StaticResource StackpanelStyle}" >
                 <Label FontSize="16" FontWeight="Bold" Foreground="White">
                     Date :
                 </Label>
-            <Label Margin="5,0" FontSize="16" Foreground="White" Name="date_time" Content="{Binding Path=CurrentDate}"/>
+            <Label Name="date_time" FontSize="16" Foreground="White" Margin="5,0" Content="{Binding Path=CurrentDate}"/>
             </StackPanel>
 
             <!--Title block-->
             <!--TextBlockTopic-->
-            <TextBlock Grid.Row="1" Grid.ColumnSpan="3"  HorizontalAlignment="Center" VerticalAlignment="Stretch" FontSize="20" FontWeight="Bold" TextDecorations="Underline" MinWidth="200" Foreground="White">
-            Patient Registration Information
+            <TextBlock Grid.Row="1" Grid.ColumnSpan="3"  HorizontalAlignment="Center" VerticalAlignment="Stretch" FontSize="20" FontWeight="Bold" TextDecorations="Underline" Foreground="White" MinWidth="200" >
+                Patient Registration Information
             </TextBlock>
 
-            <!--First sub Grid-->
+            <!--Main sub Grid-->
             <Grid Grid.Row="2" Grid.ColumnSpan="3" HorizontalAlignment="Stretch"  VerticalAlignment="Stretch" Margin="25,25,25,0">
 
                 <Grid.ColumnDefinitions>
@@ -76,41 +76,39 @@
 
                 <!--Name block-->
                 <Label Grid.Row="0" Grid.Column="1" Style="{StaticResource LabelStyles}">Name :</Label>
-                <TextBox Style="{StaticResource StyleControl}" Text="{Binding Path = Patient.Name}" Grid.Row="0" Grid.Column="2" VerticalAlignment="Center" Padding="5"  MinHeight="30" Name="fName"/>
+                <TextBox Name="fName" Grid.Row="0" Grid.Column="2" VerticalAlignment="Center" Style="{StaticResource StyleControl}" Padding="5"  MinHeight="30" Text="{Binding Path = Patient.Name}"/>
 
                 <!--Address block-->
-                <Label Grid.Row="1" Grid.Column="1" Style="{StaticResource LabelStyles}" VerticalAlignment="Top">Address :</Label>
-            <StackPanel Grid.Row="1" Grid.Column="2" Orientation="Vertical" VerticalAlignment="Top" Margin="0,2">
-                <DockPanel LastChildFill="True" Margin="0,5">
-                    <!--LabelStylesAddress-->
-                    <Label Style="{StaticResource LabelStyles}" FontWeight="Medium" FontSize="14" Foreground="Gray">Number :</Label>
-                    <TextBox Style="{StaticResource StyleControl}" Text="{Binding Path =  Patient.Address.Number}" VerticalAlignment="Center" Padding="5" MinHeight="30" Name="Number"/>
-                </DockPanel>
-                <DockPanel LastChildFill="True" Margin="0,5">
-                    <Label Style="{StaticResource LabelStyles}" FontWeight="Medium" FontSize="14" Foreground="Gray">Street :</Label>
-                    <TextBox Style="{StaticResource StyleControl}" Text="{Binding Path =  Patient.Address.Street}" VerticalAlignment="Center" Padding="5" Margin="15,0,0,0" MinHeight="30"  Name="Street"/>
-                </DockPanel>
-                <DockPanel LastChildFill="True" Margin="0,5">
-                    <Label Style="{StaticResource LabelStyles}" FontWeight="Medium" FontSize="14" Foreground="Gray">City :</Label>
-                    <TextBox Style="{StaticResource StyleControl}" Text="{Binding Path =  Patient.Address.City}" VerticalAlignment="Center" Padding="5" Margin="27,0,0,0" MinHeight="30"  Name="City"/>
-                </DockPanel>
+                <Label Grid.Row="1" Grid.Column="1" VerticalAlignment="Top" Style="{StaticResource LabelStyles}" >Address :</Label>
+                <StackPanel Grid.Row="1" Grid.Column="2"  VerticalAlignment="Top" Orientation="Vertical" Margin="0,2">
+                    <DockPanel LastChildFill="True" Margin="0,5">
+                        <Label Style="{StaticResource AddressLabelStyles}">Number :</Label>
+                        <TextBox Name="Number" Style="{StaticResource StyleControl}" VerticalAlignment="Center" Padding="5" MinHeight="30"  Text="{Binding Path =  Patient.Address.Number}" />
+                    </DockPanel>
+                    <DockPanel LastChildFill="True" Margin="0,5">
+                        <Label Style="{StaticResource AddressLabelStyles}">Street :</Label>
+                        <TextBox Name="Street" Style="{StaticResource StyleControl}"  VerticalAlignment="Center" Padding="5" Margin="15,0,0,0" MinHeight="30" Text="{Binding Path =  Patient.Address.Street}"/>
+                    </DockPanel>
+                    <DockPanel LastChildFill="True" Margin="0,5">
+                        <Label Style="{StaticResource AddressLabelStyles}">City :</Label>
+                        <TextBox Name="City" Style="{StaticResource StyleControl}" VerticalAlignment="Center" Padding="5" Margin="27,0,0,0" MinHeight="30" Text="{Binding Path =  Patient.Address.City}"/>
+                    </DockPanel>
+                </StackPanel>
 
-            </StackPanel>
-
-            <!--Gender block-->
+                <!--Gender block-->
                 <Label  Grid.Row="2" Grid.Column="1" Style="{StaticResource LabelStyles}">Gender :</Label>
-                <StackPanel Grid.Row="2" Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,6,0,0">
-                    <RadioButton Content="Male"  Name="male" FontSize="14" MinWidth="100" Command="{Binding Path=RadioCommand}" CommandParameter="{Binding ElementName=male, Path=Content}"/>
-                    <RadioButton Content=" Female" Name="female" FontSize="14" Command="{Binding Path=RadioCommand}" CommandParameter="{Binding ElementName=female, Path=Content}"/> 
+                <StackPanel Grid.Row="2" Grid.Column="2"  HorizontalAlignment="Left" VerticalAlignment="Center" Orientation="Horizontal" Margin="0,6,0,0">
+                    <RadioButton Name="male" Content="Male" FontSize="14" MinWidth="100" Command="{Binding Path=RadioCommand}" CommandParameter="{Binding ElementName=male, Path=Content}"/>
+                    <RadioButton Name="female" Content="Female" FontSize="14" Command="{Binding Path=RadioCommand}" CommandParameter="{Binding ElementName=female, Path=Content}"/> 
                 </StackPanel>
 
                 <!--Birthdate block-->
                 <Label Grid.Row="3" Grid.Column="1" Style="{StaticResource LabelStyles}">Birthdate :</Label>
-                <DatePicker Style="{StaticResource StyleControl}" SelectedDate ="{Binding Path = Patient.Dob}" Grid.Row="3" Grid.Column="2" VerticalAlignment="Center" Padding="5" MinHeight="30" Name="Date"/>
+                <DatePicker Name="Date" Grid.Row="3" Grid.Column="2" Style="{StaticResource StyleControl}" VerticalAlignment="Center" Padding="5" MinHeight="30" SelectedDate ="{Binding Path = Patient.Dob}"/>
 
                 <!--Age block-->
                 <Label Grid.Row="4" Grid.Column="1" Style="{StaticResource LabelStyles}">Age :</Label>
-                <TextBox Style="{StaticResource StyleControl}" Text="{Binding Path = Patient.Age}" Grid.Row="4" Grid.Column="2"  VerticalAlignment="Center" Padding="5" MinHeight="30" Name="Age"/>
+                <TextBox  Name="Age" Grid.Row="4" Grid.Column="2" Style="{StaticResource StyleControl}" VerticalAlignment="Center" Padding="5" MinHeight="30" Text="{Binding Path = Patient.Age}"/>
 
                 <!--Image block-->
                 <Label Grid.Row="5" Grid.Column="1" Style="{StaticResource LabelStyles}">Image :</Label>
@@ -120,26 +118,26 @@
                 </DockPanel>
 
                 <!--Image view block-->
-                <Image Source="{Binding Path=Patient.Image, UpdateSourceTrigger=PropertyChanged}" Grid.Row="6" Grid.Column="2" HorizontalAlignment="Left" Name="ImageViewer" MinWidth="95" MaxWidth="150" MinHeight="95" MaxHeight="150" Margin="0,0,0,10" />
+                <Image Name="ImageViewer" Grid.Row="6" Grid.Column="2" HorizontalAlignment="Left" MinWidth="95" MaxWidth="150" MinHeight="95" MaxHeight="150" Margin="0,0,0,10" Source="{Binding Path=Patient.Image, UpdateSourceTrigger=PropertyChanged}"/>
 
 
                 <!--Department block-->
                 <Label Grid.Row="7" Grid.Column="1" Style="{StaticResource LabelStyles}">Department :</Label>
-                <ComboBox ItemsSource="{Binding Department}" SelectedItem="{Binding Path = Patient.Dept}" Grid.Row="7" Grid.Column="2" VerticalAlignment="Center" FontSize="14" MinHeight="30" Name="Department"/>
+                <ComboBox Name="Department" Grid.Row="7" Grid.Column="2" VerticalAlignment="Center" FontSize="14" MinHeight="30" ItemsSource="{Binding Department}" SelectedItem="{Binding Path = Patient.Dept}"/>
 
                 <!--Ward Block-->
                 <Label Grid.Row="8" Grid.Column="1" Style="{StaticResource LabelStyles}">Ward :</Label>
-                <ComboBox ItemsSource="{Binding Ward}" SelectedItem="{Binding Path = Patient.Ward}" Grid.Row="8" Grid.Column="2" VerticalAlignment="Center" FontSize="14" MinHeight="30" Name="Ward"/>
+                <ComboBox Name="Ward" Grid.Row="8" Grid.Column="2" VerticalAlignment="Center" FontSize="14" MinHeight="30" ItemsSource="{Binding Ward}" SelectedItem="{Binding Path = Patient.Ward}"/>
 
                 <!--Doctor Block-->
                 <Label  Grid.Row="9" Grid.Column="1" Style="{StaticResource LabelStyles}">Doctor In Charge :</Label>
-                <ComboBox ItemsSource="{Binding DocInCharge}" SelectedItem="{Binding Path =Patient.DocInCharge}" Grid.Row="9" Grid.Column="2" VerticalAlignment="Center" FontSize="14" MinHeight="30" Name="Doctor"/>
+                <ComboBox Name="Doctor" Grid.Row="9" Grid.Column="2" VerticalAlignment="Center" FontSize="14" MinHeight="30" ItemsSource="{Binding DocInCharge}" SelectedItem="{Binding Path = Patient.DocInCharge}"/>
 
             </Grid>
 
             <!--Buttons Section-->
-            <StackPanel Grid.Row="3" Grid.ColumnSpan="3" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top"  Margin="20,10,26,0" >
-                <Button Style="{StaticResource ButtonStyle}" Command="{Binding Path=SubmitCommand}" Margin="0,0,5,0" Content="Print Preview"/>
+            <StackPanel Grid.Row="3" Grid.ColumnSpan="3" HorizontalAlignment="Right" VerticalAlignment="Top" Orientation="Horizontal" Margin="20,10,26,0" >
+                <Button Style="{StaticResource ButtonStyle}" Margin="0,0,5,0" Content="Print Preview" Command="{Binding Path=SubmitCommand}" />
                 <Button Style="{StaticResource ButtonStyle}" Content="Clear"/>
             </StackPanel>
 
