--- a/PatientRecordMVVM/Resources/MainDictionary.xaml
+++ b/PatientRecordMVVM/Resources/MainDictionary.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2">
 
     <!--Style for border in controls-->
     <Style x:Key="StyleControl" TargetType="{x:Type Control}">
@@ -8,6 +9,16 @@
                 <Setter Property="CornerRadius" Value="3" />
             </Style>
         </Style.Resources>
+    </Style>
+
+    <!--Style for the Textboxes-->
+    <Style x:Key="TextBoxStyle" TargetType="{x:Type Control}" BasedOn="{StaticResource StyleControl}">
+        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Padding" Value="5"/>
+        <Setter Property="MinHeight" Value="30"/>
+        <Setter Property="BorderBrush" Value="LightGray"/>
+        <Setter Property="BorderThickness" Value="1"/>
     </Style>
 
     <!--Style for labels-->
@@ -21,7 +32,7 @@
 
     <!--Style for Address labels-->
     <Style x:Key="AddressLabelStyles" TargetType="{x:Type Label}" BasedOn="{StaticResource LabelStyles}">
-        <Setter Property="FontWeight" Value="Medium"/>
+        <Setter Property="FontWeight" Value="Normal"/>
         <Setter Property="FontSize" Value="14"/>
         <Setter Property="Foreground" Value="Gray"/>
     </Style>
@@ -70,46 +81,6 @@
         <Setter Property="VerticalAlignment" Value="Top"/>
         <Setter Property="Orientation" Value="Horizontal"/>
         <Setter Property="Margin" Value="10"/>
-    </Style>
-
-    <!--Style for comboboxes-->
-    <Style x:Key="ComboBoxTextBoxStyle" TargetType="{x:Type TextBox}">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type TextBox}">
-                    <Grid>
-                        <Border CornerRadius="3"
-                                Background="{TemplateBinding Background}"/>
-                    </Grid>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-
-    <Style x:Key="ComboBoxButtonStyle" TargetType="{x:Type ToggleButton}">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type ToggleButton}">
-                    <Border Background="White" x:Name="border" CornerRadius="3">
-                        <ContentPresenter/>
-                    </Border>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-
-    <Style x:Key="ComboBoxStyle" TargetType="{x:Type ComboBox}">
-        <Setter Property="Grid.Column" Value="2"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="FontSize" Value="14"/>
-        <Setter Property="MinHeight" Value="30"/>
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type ComboBox}">
-                    <Border CornerRadius="3" BorderThickness="2"/>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
     </Style>
 
 </ResourceDictionary>
