--- a/PatientRecordMVVM/View/PrintPreview.xaml
+++ b/PatientRecordMVVM/View/PrintPreview.xaml
@@ -6,10 +6,10 @@
 		xmlns:local="clr-namespace:PatientRecordMVVM.View"
 		mc:Ignorable="d"
 		MinWidth="700"
-		Title="PrintPreview" Height="850" Width="800">
+		Title="PrintPreview" Height="850" Width="1000">
 	<ScrollViewer VerticalScrollBarVisibility="Auto">
 		<!--Main Grid-->
-		<Grid>
+		<Grid x:Name="MainGrid">
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="2.5*"/>
 				<ColumnDefinition Width="3*"/>
@@ -32,7 +32,7 @@
 				<Label FontSize="16" FontWeight="Bold" Foreground="White">
 					Patient ID :
 				</Label>
-                <Label FontSize="16" Foreground="White" Margin="5,0,0,0" Content="{Binding Path=PatientID}"/> 
+                <Label FontSize="16" Foreground="White" Margin="5,0,0,0" Content="{Binding PatientID}"/> 
             </StackPanel>
 
 			<!--Date block-->
@@ -40,7 +40,7 @@
 				<Label FontSize="16" FontWeight="Bold" Foreground="White">
 					Date :
 				</Label>
-				<Label Name="date_time" FontSize="16" Foreground="White" Margin="5,0" Content="{Binding Path=CurrentDate}"/>
+				<Label Name="date_time" FontSize="16" Foreground="White" Margin="5,0" Content="{Binding CurrentDate}"/>
 			</StackPanel>
 
 			<!--Title block-->
@@ -55,12 +55,12 @@
 				<StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Vertical">
 					<Ellipse Width="150" Height="150">
 						<Ellipse.Fill>
-                            <ImageBrush x:Name="ImageViewer2" ImageSource="{Binding Path=PatientImageSource}"/>
+                            <ImageBrush x:Name="ImageViewer2" ImageSource="{Binding PatientImageSource}"/>
                         </Ellipse.Fill>
 					</Ellipse>
 					<StackPanel HorizontalAlignment="Left" Orientation="Horizontal" Margin="0,10">
 						<Label Style="{StaticResource LabelStyles}" Margin="0">Patient Name :</Label>
-                        <TextBlock x:Name="ViewName" Style="{StaticResource TextBlockStyle}" Text="{Binding Path = PatientName}"/>
+                        <TextBlock x:Name="ViewName" Style="{StaticResource TextBlockStyle}" Text="{Binding PatientName}"/>
 					</StackPanel>
 				</StackPanel>
 			</Grid>
@@ -83,24 +83,24 @@
 
 					<StackPanel Grid.Row="0" Grid.Column="0" Orientation="Vertical" Margin="10,5">
 						<Label Style="{StaticResource PreviewLabelStyles}" >Address :</Label>
-                        <TextBlock x:Name="ViewANum"  Style="{StaticResource TextBlockStyle}" Text="{Binding Path =  PatientAddress.Number}"/>
-                        <TextBlock x:Name="ViewAStrt" Style="{StaticResource TextBlockStyle}" Text="{Binding Path =  PatientAddress.Street}"/>
-                        <TextBlock x:Name="ViewACity" Style="{StaticResource TextBlockStyle}" Text="{Binding Path =  PatientAddress.City}"/>
+                        <TextBlock x:Name="ViewANum"  Style="{StaticResource TextBlockStyle}" Text="{Binding PatientAddress.Number}"/>
+                        <TextBlock x:Name="ViewAStrt" Style="{StaticResource TextBlockStyle}" Text="{Binding PatientAddress.Street}"/>
+                        <TextBlock x:Name="ViewACity" Style="{StaticResource TextBlockStyle}" Text="{Binding PatientAddress.City}"/>
 					</StackPanel>
 
 					<StackPanel Grid.Row="0" Grid.Column="1" Orientation="Vertical" Margin="50,5,10,10">
 						<Label  Style="{StaticResource PreviewLabelStyles}">Gender :</Label>
-                        <TextBlock x:Name="ViewGender" Style="{StaticResource TextBlockStyle}" Text="{Binding Path = PatientGender}"/>
+                        <TextBlock x:Name="ViewGender" Style="{StaticResource TextBlockStyle}" Text="{Binding PatientGender}"/>
 					</StackPanel>
 
 					<StackPanel Grid.Row="1" Grid.Column="0" Orientation="Vertical" Margin="10,5">
 						<Label  Style="{StaticResource PreviewLabelStyles}">Date of Birth :</Label>
-                        <TextBlock x:Name="ViewDob" Style="{StaticResource TextBlockStyle}" Text="{Binding Path = PatientDateOfBirth}"/>
+                        <TextBlock x:Name="ViewDob" Style="{StaticResource TextBlockStyle}" Text="{Binding PatientDateOfBirth}"/>
                     </StackPanel>
 
 					<StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical" Margin="50,5,10,5">
 						<Label Style="{StaticResource PreviewLabelStyles}">Age :</Label>
-                        <TextBlock x:Name="ViewAge" Style="{StaticResource TextBlockStyle}" Text="{Binding Path = PatientAge}"/>
+                        <TextBlock x:Name="ViewAge" Style="{StaticResource TextBlockStyle}" Text="{Binding PatientAge}"/>
 					</StackPanel>
 				</Grid>
 			</GroupBox>
@@ -123,22 +123,22 @@
 
 					<StackPanel Grid.Row="0" Grid.Column="0" Orientation="Vertical" Margin="10,5">
 						<Label Style="{StaticResource PreviewLabelStyles}">Department :</Label>
-                        <TextBlock x:Name="ViewDepartment" Style="{StaticResource TextBlockStyle}" Text="{Binding Path=PatientDepartment}"/>
+                        <TextBlock x:Name="ViewDepartment" Style="{StaticResource TextBlockStyle}" Text="{Binding PatientDepartment}"/>
 					</StackPanel>
 
 					<StackPanel Grid.Row="0" Grid.Column="1" Orientation="Vertical" Margin="50,5,10,0">
 						<Label  Style="{StaticResource PreviewLabelStyles}">Ward :</Label>
-                        <TextBlock x:Name="ViewWard" Style="{StaticResource TextBlockStyle}" Text="{Binding Path=PatientWard}"/>
+                        <TextBlock x:Name="ViewWard" Style="{StaticResource TextBlockStyle}" Text="{Binding PatientWard}"/>
                     </StackPanel>
 
 					<StackPanel Grid.Row="1" Grid.Column="0" Orientation="Vertical" Margin="10,5,10,10">
 						<Label  Style="{StaticResource PreviewLabelStyles}">Doctor in Charge :</Label>
-                        <TextBlock x:Name="ViewDoc" Style="{StaticResource TextBlockStyle}" Text="{Binding Path=PatientDotorcInCharge}"/>
+                        <TextBlock x:Name="ViewDoc" Style="{StaticResource TextBlockStyle}" Text="{Binding PatientDotorcInCharge}"/>
                     </StackPanel>
 				</Grid>
 			</GroupBox>
 
-			<Button Grid.Row="5" Grid.Column="2" Style="{StaticResource ButtonStyle}" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="20,7,26,0" Content="Print Content"/>
+            <Button Grid.Row="5" Grid.Column="2" Style="{StaticResource ButtonStyle}" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="20,7,26,0" Content="Print Content" Command="{Binding Path=PrintCommand}"/>
 
 		</Grid>
 	</ScrollViewer>
