--- a/PatientRecordMVVM/Views/PatientRecordDetails.xaml
+++ b/PatientRecordMVVM/Views/PatientRecordDetails.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="PatientRecordMVVM.View.PatientRecordDetails"
+﻿<Window x:Class="PatientRecordMVVM.Views.PatientRecordDetails"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PatientRecordMVVM.View"
+        xmlns:local="clr-namespace:PatientRecordMVVM.Views"
         mc:Ignorable="d"
         MinWidth="700"
         Title="PatientRecordDetails" Height="850" Width="600">
